# netsim-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DEV-VM.md  HISTORY.md  HOLEPUNCH.md  Makefile.toml  README.md  REVIEW.md  build.rs  cliff.toml  lima.yaml  log  qemu-vm.sh  setcap.sh  setup.sh  vm-up.sh
.cargo/: config.toml
.config/: nextest.toml
.githooks/: pre-commit
.github/workflows/: book.yml  ci.yml  release-rolling.yml
crates/netsim-vm/: Cargo.toml
crates/netsim-vm/src/: main.rs  util.rs  vm.rs
docs/: SUMMARY.md  holepunching.md  introduction.md  ipv6.md  limitations.md  patterns.md  reference.md
docs/guide/: getting-started.md  motivation.md  nat-and-firewalls.md  running-code.md  testing.md  topology.md  vm.md
docs/reference/: holepunching.md  ipv6.md  patterns.md  toml-reference.md
iroh-integration/: iroh-defaults.toml  netsim.yaml  patchbay.toml
iroh-integration/netsim/: iroh-defaults.toml
iroh-integration/netsim/topos/: 1to1-nat-switch.toml
iroh-integration/patchbay/topos/: 1to1-nat.toml
iroh-integration/sims/: iperf-1to1-public.toml  iroh-1to1-nat-switch.toml  iroh-1to1-nat.toml  iroh-1to1-public.toml  iroh-1to10-public.toml  iroh-switch-direct.toml
iroh-integration/topos/: 1to1-nat.toml  switch-direct.toml
netsim/: Cargo.toml
netsim-core/: Cargo.toml
netsim-core/src/: config.rs  core.rs  firewall.rs  handles.rs  lab.rs  lib.rs  nat.rs  netlink.rs  netns.rs  qdisc.rs  test_utils.rs  tests.rs
netsim-utils/: Cargo.toml  build.rs
netsim-utils/src/: assets.rs  binary_cache.rs  lib.rs  serve.rs  ui.rs
netsim-vm/: Cargo.toml
netsim-vm/src/: main.rs  util.rs  vm.rs
netsim/examples/: simple.rs
netsim/src/: init.rs  lib.rs  main.rs
netsim/src/sim/: build.rs  capture.rs  mod.rs  progress.rs  report.rs  runner.rs  steps.rs  topology.rs
patchbay/: Cargo.toml
patchbay-cli/: Cargo.toml
patchbay-cli/src/: compare.rs  init.rs  main.rs  native.rs  test.rs  upload.rs  util.rs  vm.rs
patchbay-cli/tests/: compare_integration.rs
patchbay-cli/tests/fixtures/: iperf-1to1-public.toml
patchbay-cli/tests/fixtures/counter/: Cargo.toml
patchbay-cli/tests/fixtures/counter/tests/: counter.rs
patchbay-runner/: Cargo.toml
patchbay-runner/examples/: simple.rs
patchbay-runner/src/: lib.rs  main.rs
patchbay-runner/src/sim/: build.rs  capture.rs  matrix.rs  mod.rs  progress.rs  report.rs  runner.rs  steps.rs  topology.rs
patchbay-server/: Cargo.toml  README.md  github-workflow-template.yml  patchbay-serve.service
patchbay-server/src/: lib.rs  main.rs
patchbay-utils/: Cargo.toml  build.rs
patchbay-utils/src/: assets.rs  binary_cache.rs  lib.rs  manifest.rs  serve.rs
patchbay-vm/: Cargo.toml
patchbay-vm/src/: common.rs  container.rs  lib.rs  main.rs  qemu.rs  util.rs  vm.rs
patchbay/examples/: simple.rs
patchbay/src/: balancer.rs  config.rs  consts.rs  core.rs  device.rs  dns_server.rs  event.rs  firewall.rs  handles.rs  iface.rs  lab.rs  lib.rs  metrics.rs  nat.rs  nat64.rs  netlink.rs  netns.rs  nft.rs  qdisc.rs  router.rs  test_utils.rs  tests.rs  tracing.rs  userns.rs  wiring.rs  writer.rs
patchbay/src/tests/: alloc.rs  balancer.rs  devtools.rs  dns.rs  firewall.rs  hairpin.rs  holepunch.rs  iface.rs  ipv6.rs  ipv6_ll.rs  lifecycle.rs  link_condition.rs  mod.rs  mtu.rs  nat.rs  nat64.rs  nat_rebind.rs  preset.rs  region.rs  route.rs  smoke.rs
patchbay/tests/: vm_smoke.rs
plans/: PLAN.md  bidirectional-impairment.md  compare-cleanup.md  compare-refactor.md  devtools-ui.md  dns.md  future-platform.md  ipv6-linklocal.md  ipv6.md  iroh-netsim.md  nat64.md  netsim-vm-split.md  new-api.md  no-globals-better-spawn.md  no-sudo.md  patchbay-vm-split.md  real-world-conditions.md  rootless.md  runner-improvements.md  selfcontained.md  testing.md  ui.md  v1-unified-cli.md  virtual-time.md  workspace-reorg.md
src/: assets.rs  binary_cache.rs  core.rs  lib.rs  main.rs  netns.rs  qdisc.rs  serve.rs
src/sim/: build.rs  capture.rs  env.rs  mod.rs  progress.rs  report.rs  runner.rs  topology.rs  transfer.rs
ui/: package-lock.json
ui/e2e/: compare.spec.ts  devtools.spec.ts  global-setup.ts  helpers.ts  iroh-1to1-nat.spec.ts  push.spec.ts  runner-sim.spec.ts
ui/src/: App.tsx  BatchPage.tsx  ComparePage.tsx  GroupPage.tsx  PushedRunsIndex.tsx  RunPage.tsx  RunsIndex.tsx  api.ts  index.css  main.tsx  types.ts  utils.ts
ui/src/components/: CompareView.tsx  JsonTree.tsx  KvPairs.tsx  LogsTab.tsx  MetricsTab.tsx  PerfTab.tsx  RunSelector.tsx  RunView.tsx  TimelineTab.tsx
