[package]
name    = "netsim-utils"
version = "0.1.0"
edition = "2021"
build   = "build.rs"

[dependencies]
anyhow   = "1"
serde    = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest  = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "stream"] }
sha2     = "0.10"
flate2   = "1"
tar      = "0.4"
tracing  = "0.1"
webbrowser = "1"
glob     = "0.3"
