[package]
name    = "netsim"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "netsim"
path = "src/main.rs"

[dependencies]
netsim-core  = { path = "../netsim-core" }
netsim-utils = { path = "../netsim-utils" }
anyhow       = "1"
tokio        = { version = "1", features = ["rt", "macros", "sync", "time", "fs", "process"] }
clap         = { version = "4", features = ["derive"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
toml         = "0.8"
regex        = "1"
comfy-table  = "7"
ctrlc        = "3"
rcgen        = "0.13"
sha2         = "0.10"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono       = { version = "0.4", default-features = false, features = ["clock"] }
glob         = "0.3"
ctor         = "0.2"
nix          = { version = "0.30", features = ["signal", "process"] }
flate2       = "1"
tar          = "0.4"

[dev-dependencies]
serial_test     = "3"
n0-tracing-test = "0.3.0"
