[package]
name = "patchbay-cli"
version = "0.1.0"
description = "Unified CLI for patchbay simulations (native and VM)"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "patchbay"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
patchbay = { path = "../patchbay" }
patchbay-runner = { path = "../patchbay-runner" }
patchbay-vm = { path = "../patchbay-vm", optional = true }
patchbay-server = { path = "../patchbay-server", optional = true }
patchbay-utils = { path = "../patchbay-utils" }
ctor = "0.6"
nix = { version = "0.30", features = ["signal", "process"] }
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "fs", "process"] }
toml = "1.0"
tracing = "0.1"

[features]
default = ["serve", "vm"]
serve = ["dep:patchbay-server"]
vm = ["dep:patchbay-vm"]
