[package]
name = "patchbay-cli"
version = "0.1.0"
description = "Unified CLI for patchbay simulations (native and VM)"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "patchbay"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
patchbay = { path = "../patchbay" }
patchbay-runner = { path = "../patchbay-runner" }
patchbay-vm = { path = "../patchbay-vm", optional = true }
patchbay-server = { path = "../patchbay-server", optional = true }
patchbay-utils = { path = "../patchbay-utils" }
ctor = "0.6"
nix = { version = "0.30", features = ["signal", "process"] }
flate2 = "1"
open = "5"
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "fs", "process"] }
toml = "1.0"
tracing = "0.1"

[features]
default = ["serve", "upload", "vm"]
serve = ["dep:patchbay-server"]
upload = ["dep:reqwest"]
vm = ["dep:patchbay-vm"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/patchbay-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
