[package]
name = "patchbay-server"
version = "0.1.0"
description = "Devtools server for patchbay"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
build = "build.rs"

[dependencies]
axum = { version = "0.8", features = ["tokio"] }
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "fs", "io-util"] }
tokio-stream = { version = "0.1", features = ["sync"] }
anyhow = "1"
async-stream = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
