[package]
name = "patchbay-vm"
version = "0.1.0"
description = "VM wrapper for running patchbay simulations (QEMU or Apple container backend)"
keywords = ["network", "simulation", "qemu", "vm", "container"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
patchbay-utils = { path = "../patchbay-utils" }
nix = { version = "0.30", features = ["signal", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"
tracing = "0.1"
